fix ej 24 guia 3

--- a/3-guia/ejercicios-3/ej-24-3.tex
+++ b/3-guia/ejercicios-3/ej-24-3.tex
@@ -3,7 +3,7 @@
 \begin{enunciado}{\ejercicio}
   Pedro compró 14 unidades de fruta: 6 duraznos, 2 naranjas, 1 banana, 1 pera, 1 higo, 1 kiwi, 1 ciruela, 1 mandarina.
   Su propósito es comer una fruta en cada desayuno y merienda. Determinar de cuántas formas puede organizar sus refrigerios de
-  esa semana si no quiere consumir más de una \orange{naranja} por día.
+  esa semana si no quiere consumir más de una naranja por día.
 \end{enunciado}
 
 \Pedro tiene que elegir 2 frutas por día, una para desayunar y otra para merendar.
@@ -34,14 +34,15 @@ Pero tiene alto mambo con las \orange{naranjas}. Vamos a ver como calcular que e
             \text{merienda} & \times\red{!}             &               &                  & $\orange{\faIcon{lemon}}$ &                &               &                \\\hline
           \end{array}
         $$
-        Peeeeeero, ojo que estamos contando el doble, porque el razonamiento sirve para dos objetos \underline{distintos},
-        por eso hay que dividir entre 2. A \Pedro no le importa cual de las 2 naranjas:
+        Peeeeeero, ojo que ¡Estamos contando el doble! A \Pedro no le importa cual de las 2 \orange{naranjas} come cada día.
+        El razonamiento usado sirve para dos objetos \underline{distintos}, las \orange{naranjas} en este ejercicio son \textit{indistinguibles},
+        por eso hay que dividir entre 2:
         $$
           \frac{14 \cdot 12}{2} = 84 \llamada1
         $$
 
   \item
-        También se puede pensar como que tengo que poner 2 objetos repetidos en 14 lugares y eso de repetidos nos hace dividir por el factorial ¿O no?:
+        Otra forma de encarar: Tengo que poner 2 objetos \textit{repetidos, iguales, indistinguibles entre sí} en 14 lugares y eso de repetidos nos hace dividir por el factorial ¿O no?:
         $$
           \frac{\binom{14}{2}}{2!} = 91
         $$
