--- a/3-guia/ejercicios-3/ej-28-3.tex
+++ b/3-guia/ejercicios-3/ej-28-3.tex
@@ -1,21 +1,23 @@
-\ejercicio
-En este ejercicio no hace falta usar inducción.
-\begin{enumerate}[label=\roman*)]
-	\item Probar que $\sumatoria{k = 0}{n} \binom{n}{k}^2 = \binom{2n}{n}$. \qquad sug: $\binom{n}{k} = \binom{n}{n-k}$.
-	\item Probar que $\sumatoria{k = 0}{n} (-1)^k \binom{n}{k} = 0$.
-	\item Probar que $\sumatoria{k = 0}{2n} \binom{2n}{k} = 4^n$ y deducir que $\binom{2n}{n} < 4^n$.
-	\item Calcular $\sumatoria{k = 0}{2n+1} \binom{2n+1}{k}$ y deducir que $\sumatoria{k=0}{n} \binom{2n+1}{k}$.
-\end{enumerate}
+\begin{enunciado}{\ejercicio}
+  En este ejercicio no hace falta usar inducción.
+  \begin{enumerate}[label=\roman*)]
+    \item Probar que $\sumatoria{k = 0}{n} \binom{n}{k}^2 = \binom{2n}{n}$. \qquad sug: $\binom{n}{k} = \binom{n}{n-k}$.
+    \item Probar que $\sumatoria{k = 0}{n} (-1)^k \binom{n}{k} = 0$.
+    \item Probar que $\sumatoria{k = 0}{2n} \binom{2n}{k} = 4^n$ y deducir que $\binom{2n}{n} < 4^n$.
+    \item Calcular $\sumatoria{k = 0}{2n+1} \binom{2n+1}{k}$ y deducir que $\sumatoria{k=0}{n} \binom{2n+1}{k}$.
+  \end{enumerate}
+\end{enunciado}
 
-\separadorCorto
-\hacer
 Binomio de Newton: $(x + y)^n = \sumatoria{k=0}{n} \binom{n}{k} x^n y^{n-k}$
+
 \begin{enumerate}[label=\roman*)]
-	\item 
-
-	\item  
-
-	\item 
-	\item 
+  \item
+        \hacer
+  \item
+        \hacer
+  \item
+        \hacer
+  \item
+        \hacer
 \end{enumerate}
 
