--- a/3-guia/ejercicios-3/ej-27-3.tex
+++ b/3-guia/ejercicios-3/ej-27-3.tex
@@ -28,9 +28,10 @@ Resulta que $p(1)$ es verdadera.
 \textit{Paso inductivo:}
 Voy a asumir como verdaderaa a
 $$
-  p(\blue{k}) : \underbrace{a_{\blue{k}} = \binom{2\blue{k}}{\blue{k}}}_{\text{\purple{hipótesis inductiva}}}
+  p(\blue{k}) :
+  \underbrace{a_{\blue{k}} = \binom{2\blue{k}}{\blue{k}}}_{\text{\purple{hipótesis inductiva}}}
 $$
-para algún $\blue{k} \en \enteros$.\par
+para algún $\blue{k} \en \enteros$.
 
 Ahora quiero probar que:
 
