--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -99,7 +99,7 @@
 \newcommand{\hacer}{
   {\color{red!80!black}{\faIcon{flushed}... hay que hacerlo! \faIcon{sad-cry}}}\par
   {\color{black!70!white}
-    \small Si querés mandarlo: Telegram $\to$ \href{\dirTelegram}{\small\faIcon{telegram}},
+    \small Si querés mandarlo: Telegram $\to$ \href{\dirTelegram}{\small\telegram},
     o  mejor aún si querés subirlo en \LaTeX $\to$ \href{\dirRepo}{\small \github}.
   }\par
 }
@@ -326,8 +326,9 @@
 \def\mindExplosion{https://www.youtube.com/watch?v=9CS7j5I6aOc}
 
 %%% Iconos más usados
-\def\github{\color{black}{\faIcon[regular]{github}}}
+\def\github{{\color{violet!50!black}{\faIcon{github}}}}
 \def\instagram{\faIcon{instagram}}
 \def\tiktok{\faIcon{tiktok}}
 \def\linkedin{\blue{\faIcon{linkedin}}}
 \def\youtube{\color{red!70}{\faIcon{youtube}}}
+\def\telegram{\blue{\faIcon{telegram}}}
