--- a/macros/encabezado-pie.tex
+++ b/macros/encabezado-pie.tex
@@ -18,10 +18,11 @@
 
 \fancyfoot[EL]{
   \href{\dirRepo}{\small\github
-    ¡Aportá con correcciones, subiendo ejercicios, \yellow{\FiveStar} al repo, críticas, todo sirve.}
+    ¡Aportá con correcciones, subiendo ejercicios, \yellow{\FiveStar} al repo, críticas, todo sirve.
+    }
 }    % pie izquierdo pares
 \fancyfoot[OL]{
-  \href{\dirTelegram}{\small\faIcon{telegram} ¿Errores? Avisá así se corrige y ganamos todos.
+  \href{\dirTelegram}{\small\telegram ¿Errores? Avisá así se corrige y ganamos todos.
   }
 } % pie izquierdo impares
 
@@ -29,7 +30,6 @@
 \fancyfoot[OR]{
   \small\hyperlink{indice-\guia}{
     Ir a índice $\uparrow$\\ \vspace{-5pt}
-    \update }
-}             % pie derecho pares
+    \update }}             % pie derecho pares
 
 \fancyfoot[ER]{\small \hyperlink{indice-\guia}{ Ir a índice $\uparrow$}}                            % pie derecho impares
