update aporte 24 guia 3

--- a/3-guia/ejercicios-3/ej-24-3.tex
+++ b/3-guia/ejercicios-3/ej-24-3.tex
@@ -91,4 +91,6 @@ $$
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://github.com/rlgarro}{Román LG \github}
+
 \end{aportes}
